# CodeWhisper

./: .gitignore  README.md  main.py  pyproject.toml
CodeWhisper/core/: extractor.py
CodeWhisper/parsers/: comment_parser.py  url_parser.py
CodeWhisper/utils/: common_utils.py
