[tool.poetry]
name = "codewhisper"
version = "0.1.0"
description = "Extracting silent \"whispers\" or notes left behind in the code"
authors = ["Gowthamaraj Rajendran <gowthamaraj360@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
